feat: add native query to select limited comment per post